# ff_awards

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PYTHON_LEARNING_PLAN.md  README.md  REFACTORING_PLAN.md  coverage.json  ff_multi.py  ff_tracker.py  pyproject.toml  requirements.txt  test_playoff_api.py  test_playoff_detection.py  test_playoff_extraction.py  test_playoff_models.py
.github/workflows/: championship-report.yml  season-recap.yml  weekly-report.yml
.specify/: README.md
.specify/examples/: single-league-usage.md
.specify/memory/: constitution.md
.specify/specs/001-season-challenges/: plan.md  spec.md
.specify/specs/001-season-challenges/contracts/: challenge-calculator.md
.specify/specs/002-weekly-highlights/: plan.md  spec.md
.specify/specs/003-output-formatters/: plan.md  spec.md
.specify/specs/004-multi-league-support/: plan.md  spec.md
.specify/specs/005-format-arguments/: plan.md  spec.md
.specify/specs/006-playoff-mode/: ESPN_API_TESTING.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
.specify/specs/006-playoff-mode/contracts/: espn-playoff-api.md  playoff-data-structures.md
.specify/specs/006-playoff-mode/examples/: 01-semifinals-console.txt  02-finals-console.txt  03-championship-console.txt  04-semifinals-markdown.md  05-championship-markdown.md  06-semifinals-json.json  07-championship-json.json  08-semifinals-email.html  09-championship-email.html  README.md
.specify/specs/007-championship-week-script/: GAME_STATUS_DETECTION.md  README.md  spec.md
.specify/specs/008-season-recap/: DECISIONS.md  MANUAL_TESTING_GUIDE.md  PHASE6_TESTING.md  README.md  data-model.md  plan.md  quickstart.md  research.md  spec.md
.specify/templates/: plan-template.md  spec-template.md
docs/: EMAIL_RENDERING_TESTING.md  EMAIL_TEMPLATE_INJECTION.md  EMAIL_TESTING_TOOLS.html
ff_tracker/: __init__.py  __main__.py  championship.py  cli_utils.py  config.py  exceptions.py  main.py  season_recap.py
ff_tracker/display/: __init__.py  base.py  console.py  email.py  factory.py  json.py  markdown.py  season_recap_console.py  season_recap_email.py  season_recap_json.py  season_recap_markdown.py  season_recap_sheets.py  sheets.py
ff_tracker/models/: __init__.py  base.py  challenge.py  championship.py  division.py  game.py  owner.py  player.py  playoff.py  season_summary.py  team.py  week.py  weekly_challenge.py
ff_tracker/services/: __init__.py  challenge_service.py  championship_service.py  espn_service.py  roster_validator.py  season_recap_service.py  weekly_challenge_service.py
tests/: test_challenge_service.py  test_championship_service.py  test_cli_utils.py  test_config.py  test_console_formatter.py  test_email_formatter.py  test_espn_service_helpers.py  test_formatter_factory.py  test_json_formatter.py  test_main_cli.py  test_markdown_formatter.py  test_model_properties.py  test_sheets_formatter.py  test_weekly_challenge_service.py
tests/playoff_mode/: test_playoff_api.py  test_playoff_detection.py  test_playoff_extraction.py  test_playoff_models.py  test_playoff_week_handling.py
typings/espn_api/: football.pyi
