[project]
name = "ff-awards"
version = "0.1.0"
description = "A command-line tool to analyze ESPN Fantasy Football leagues and track 5 specific season challenges worth $30 each"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Shaun Burdick", email = "github@shaunburdick.com" },
]
requires-python = ">=3.9"
keywords = ["fantasy-football", "espn", "cli", "sports", "analytics"]

dependencies = [
    "espn-api==0.45.1",
    "tabulate>=0.9.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/shaunburdick/ff_awards"
Repository = "https://github.com/shaunburdick/ff_awards"
Issues = "https://github.com/shaunburdick/ff_awards/issues"

[project.scripts]
ff-tracker = "ff_tracker:main"
ff-multi = "ff_multi:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []
